--- a/app/src/main/res/layout/dialogomensajelicoreria.xml
+++ b/app/src/main/res/layout/dialogomensajelicoreria.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
@@ -36,7 +37,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:hint="Nombre"
-            android:digits="@string/digitos"
+            android:digits="@string/digitos3"
             android:id="@+id/nombreConsul"
             android:layout_weight="3"/>
     </LinearLayout>
@@ -48,6 +49,6 @@
         android:layout_height="match_parent"
         android:maxLines="5"
         android:hint="@string/hint"
-        android:digits="@string/digitos2"
+        android:digits="@string/digitos4"
         android:padding="10dp" />
 </LinearLayout>
