--- a/app/src/main/res/layout/filas_registros.xml
+++ b/app/src/main/res/layout/filas_registros.xml
@@ -3,98 +3,93 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="5dp"
-    android:layout_marginRight="5dp"
     android:layout_marginLeft="5dp"
+    android:layout_marginTop="4dp"
+    android:layout_marginRight="5dp"
+    android:layout_marginBottom="5dp"
     card_view:cardCornerRadius="8dp"
-    android:layout_marginTop="5dp"
     card_view:cardElevation="4dp">
 
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
 
-        <TextView
-            android:id="@+id/nombre"
-            android:layout_width="wrap_content"
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:layout_marginTop="5dp"
-            android:text="@string/consultaNombre"
-            android:textSize="15sp" />
-
-        <TextView
-            android:id="@+id/consulta"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignStart="@id/nombre"
-            android:layout_marginTop="30dp"
-            android:text="@string/consultaConsulta"
-            android:textSize="15sp" />
-
-        <TextView
-            android:id="@+id/respuesta"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignStart="@id/consulta"
-            android:layout_marginTop="54dp"
-            android:text="@string/responderConsulta"
-            android:textSize="15sp" />
+            android:layout_marginStart="5dp"
+            android:orientation="vertical">
 
 
-        <TextView
-            android:id="@+id/consulta_nombre"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignTop="@+id/nombre"
-            android:layout_marginStart="6dp"
-            android:layout_toEndOf="@id/nombre"
-            android:textSize="15sp" />
+            <TextView
+                android:id="@+id/nombre"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:text="@string/consultaNombre"
+                android:textSize="15sp" />
+
+            <TextView
+                android:id="@+id/consulta_nombre"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="5dp"
+                android:textSize="15sp" />
 
 
-        <TextView
-            android:id="@+id/consulta_consulta"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignTop="@id/consulta"
-            android:layout_marginStart="6dp"
-            android:layout_toEndOf="@id/consulta"
-            android:textSize="15sp" />
+            <TextView
+                android:id="@+id/consulta"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:text="@string/consultaConsulta"
+                android:textSize="15sp" />
+
+            <TextView
+                android:id="@+id/consulta_consulta"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="5dp"
+                android:textSize="15sp" />
+
+            <TextView
+                android:id="@+id/respuesta"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:text="@string/responderConsulta"
+                android:textSize="15sp" />
 
 
-        <TextView
-            android:id="@+id/consulta_respuesta"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignTop="@+id/respuesta"
-            android:layout_marginStart="6dp"
-            android:layout_toEndOf="@id/respuesta"
-            android:textSize="15sp" />
+            <TextView
+                android:id="@+id/consulta_respuesta"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:layout_marginEnd="5dp"
+                android:textSize="15sp" />
 
 
+            <Button
+                android:id="@+id/btn_responder"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="3dp"
+                android:layout_marginEnd="5dp"
+                android:layout_marginTop="5dp"
+                android:background="@drawable/boton_redodno"
+                android:text="@string/responderBoton"
+                android:textColor="@color/texto" />
 
-        <Button
-            android:id="@+id/btn_responder"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignTop="@+id/nombre"
-            android:layout_alignParentEnd="true"
-            android:layout_marginEnd="6dp"
-            android:background="@drawable/boton_redodno"
-            android:text="@string/responderBoton"
-            android:textColor="@color/texto" />
+            <TextView
+                android:id="@+id/idLico"
+                android:layout_width="2dp"
+                android:layout_height="5dp"
+                android:visibility="invisible" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignStart="@+id/btn_responder"
-            android:layout_below="@+id/btn_responder"
-            android:visibility="invisible"
-            android:id="@+id/idLico"
-            />
+        </LinearLayout>
+    </ScrollView>
 
-    </RelativeLayout>
 </android.support.v7.widget.CardView>
