--- a/app/src/main/res/layout/activity_pantalla_principal_licoreria.xml
+++ b/app/src/main/res/layout/activity_pantalla_principal_licoreria.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context=".pantallaPrincipalLicoreria">
 
@@ -42,13 +42,12 @@
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintVertical_bias="1.0">
 
-                <ImageView
-                    android:id="@+id/fotoLico"
-                    android:layout_width="200dp"
-                    android:layout_height="200dp"
-                    android:src="@drawable/loadingcircles"
-                    android:background="@drawable/borde_camara_imagen"
-                    />
+                    <ImageView
+                        android:id="@+id/fotoLico"
+                        android:layout_width="200dp"
+                        android:layout_height="200dp"
+                        android:background="@drawable/borde_camara_imagen"
+                        android:src="@drawable/loadingcircles" />
 
                 </android.support.v7.widget.CardView>
 
@@ -56,9 +55,9 @@
             </LinearLayout>
 
             <LinearLayout
-                android:layout_marginTop="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
                 android:orientation="horizontal">
 
                 <Button
@@ -89,7 +88,6 @@
             </LinearLayout>
 
 
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
@@ -104,8 +102,8 @@
                     android:orientation="horizontal">
 
                     <Switch
-                        style="@style/myswitch"
                         android:id="@+id/estado"
+                        style="@style/myswitch"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:gravity="center"
@@ -151,7 +149,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="@string/nombreLic"
-                                android:textSize="20dp" />
+                                android:textSize="25dp" />
 
                             <TextView
                                 android:id="@+id/nombreLico"
@@ -179,8 +177,9 @@
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
                         android:layout_marginLeft="30dp"
-                        android:layout_marginTop="5dp"
+                        android:layout_marginTop="10dp"
                         android:layout_marginRight="30dp"
+                        android:layout_marginBottom="10dp"
                         android:background="@color/textoSegundo" />
 
 
@@ -240,8 +239,9 @@
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
                         android:layout_marginLeft="30dp"
-                        android:layout_marginTop="5dp"
+                        android:layout_marginTop="10dp"
                         android:layout_marginRight="30dp"
+                        android:layout_marginBottom="10dp"
                         android:background="@color/textoSegundo" />
 
                     <LinearLayout
@@ -299,13 +299,14 @@
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
                         android:layout_marginLeft="30dp"
-                        android:layout_marginTop="5dp"
+                        android:layout_marginTop="10dp"
                         android:layout_marginRight="30dp"
+                        android:layout_marginBottom="10dp"
                         android:background="@color/textoSegundo" />
 
 
-
                     //
+
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -363,14 +364,12 @@
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
                         android:layout_marginLeft="30dp"
-                        android:layout_marginTop="5dp"
+                        android:layout_marginTop="10dp"
                         android:layout_marginRight="30dp"
+                        android:layout_marginBottom="10dp"
                         android:background="@color/textoSegundo" />
 
                     //
-
-
-
 
 
                     <LinearLayout
@@ -418,7 +417,7 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
                             android:layout_marginTop="5dp"
-                            android:layout_marginRight="25dp"
+                            android:layout_marginEnd="25dp"
                             android:layout_marginBottom="2dp"
                             android:background="@drawable/redondo_boton"
                             android:padding="5dp"
@@ -430,8 +429,9 @@
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
                         android:layout_marginLeft="30dp"
-                        android:layout_marginTop="5dp"
+                        android:layout_marginTop="10dp"
                         android:layout_marginRight="30dp"
+                        android:layout_marginBottom="10dp"
                         android:background="@color/textoSegundo" />
 
 
@@ -440,7 +440,6 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:layout_marginTop="10dp"
                         android:gravity="center"
                         android:orientation="horizontal">
 
@@ -460,7 +459,7 @@
 
 
                             <TextView
-                                android:layout_width="match_parent"
+                                android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="@string/promoLic"
                                 android:textSize="25dp" />
@@ -480,17 +479,123 @@
                     android:layout_height="150dp"
                     android:layout_marginLeft="30dp"
                     android:layout_marginRight="30dp"
-                    android:layout_marginBottom="5dp"
-                    android:padding="8dp"
-                    android:digits="@string/digitos2"
+                    android:layout_marginBottom="4dp"
                     android:background="@drawable/border_textview"
-                    android:hint="Ingrese la promocion del día" />
+                    android:digits="@string/digitos2"
+                    android:hint="@string/promocionLicoreria"
+                    android:padding="8dp" />
+
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginLeft="30dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginRight="30dp"
+                    android:layout_marginBottom="10dp"
+                    android:background="@color/textoSegundo" />
+
+                <!-- -->
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:orientation="horizontal">
+
+
+                    <ImageView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_weight="1"
+                        android:src="@drawable/visit" />
+
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="25dp"
+                        android:layout_weight="6"
+                        android:orientation="vertical">
+
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/visitasLicoreria"
+                            android:textSize="25sp" />
+
+                        <LinearLayout
+                            android:layout_marginTop="3dp"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginEnd="5dp"
+                            android:orientation="horizontal">
+
+                            <TextView
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="2"
+                                android:text="Diarias:"
+                                android:textAlignment="center"
+                                android:textSize="18sp" />
+
+                            <TextView
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:background="@color/colorPrimaryDark"
+                                android:text="7"
+                                android:id="@+id/conteoDiario"
+                                android:textAlignment="center"
+                                android:textColor="@color/texto"
+                                android:textSize="18sp"
+                                android:textStyle="bold" />
+
+                            <TextView
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="2"
+                                android:text="Semanal:"
+                                android:textAlignment="center"
+                                android:textSize="18sp" />
+
+                            <TextView
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:background="@color/colorPrimaryDark"
+                                android:text="30"
+                                android:id="@+id/conteoSemanal"
+                                android:textAlignment="center"
+                                android:textColor="@color/texto"
+                                android:textSize="18sp"
+                                android:textStyle="bold" />
+
+                        </LinearLayout>
+
+
+                    </LinearLayout>
+
+
+                </LinearLayout>
+                <!-- -->
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginLeft="30dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginRight="30dp"
+                    android:layout_marginBottom="10dp"
+                    android:background="@color/textoSegundo" />
 
                 <Button
                     android:id="@+id/guardarPromo"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="30dp"
+                    android:layout_marginTop="5dp"
                     android:layout_marginRight="30dp"
                     android:layout_marginBottom="3dp"
                     android:background="@drawable/redondo_boton"
@@ -508,7 +613,6 @@
                     android:background="@drawable/redondo_boton"
                     android:text="@string/dudasConsultas"
                     android:textColor="@color/texto" />
-
 
 
             </LinearLayout>
