--- a/app/src/main/res/layout/activity_pantalla_principal_licoreria.xml
+++ b/app/src/main/res/layout/activity_pantalla_principal_licoreria.xml
@@ -516,61 +516,27 @@
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="25dp"
                         android:layout_weight="6"
-                        android:orientation="vertical">
+                        android:orientation="horizontal">
 
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/visitasLicoreria"
-                            android:textSize="25sp" />
+                            android:textSize="20sp" />
 
-                        <LinearLayout
-                            android:layout_marginTop="3dp"
+
+                        <TextView
+                            android:id="@+id/conteoDiario"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:background="@color/colorPrimaryDark"
+                            android:textAlignment="center"
+                            android:layout_marginStart="5dp"
                             android:layout_marginEnd="5dp"
-                            android:orientation="horizontal">
-
-                            <TextView
-                                android:layout_width="0dp"
-                                android:layout_height="wrap_content"
-                                android:layout_weight="2"
-                                android:text="Diarias:"
-                                android:textAlignment="center"
-                                android:textSize="18sp" />
-
-                            <TextView
-                                android:layout_width="0dp"
-                                android:layout_height="wrap_content"
-                                android:layout_weight="1"
-                                android:background="@color/colorPrimaryDark"
-                                android:id="@+id/conteoDiario"
-                                android:textAlignment="center"
-                                android:textColor="@color/texto"
-                                android:textSize="18sp"
-                                android:textStyle="bold" />
-
-                            <TextView
-                                android:layout_width="0dp"
-                                android:layout_height="wrap_content"
-                                android:layout_weight="2"
-                                android:text="Semanal:"
-                                android:textAlignment="center"
-                                android:textSize="18sp" />
-
-                            <TextView
-                                android:layout_width="0dp"
-                                android:layout_height="wrap_content"
-                                android:layout_weight="1"
-                                android:background="@color/colorPrimaryDark"
-                                android:id="@+id/conteoSemanal"
-                                android:textAlignment="center"
-                                android:textColor="@color/texto"
-                                android:textSize="18sp"
-                                android:textStyle="bold" />
-
-                        </LinearLayout>
+                            android:textColor="@color/texto"
+                            android:textSize="25sp"
+                            android:textStyle="bold" />
 
 
                     </LinearLayout>
