modificacion de carga de registros cuando se retorna a la pantalla de buscar lic, e inicio de modificacion de logo APIDEAS

--- a/app/src/main/res/layout/activity_registro_licoreria.xml
+++ b/app/src/main/res/layout/activity_registro_licoreria.xml
@@ -199,7 +199,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginRight="10dp"
-                        android:digits="@string/digitos"
+                        android:digits="@string/digitos2"
                         android:maxLines="1"
                         app:backgroundTint="@color/textoSegundo" />
 
