--- a/app/src/main/res/layout-land/activity_splash.xml
+++ b/app/src/main/res/layout-land/activity_splash.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/texto"
+    android:background="@color/colorPrimaryDark"
     android:orientation="horizontal"
     tools:context=".Splash">
 
@@ -44,7 +44,7 @@
         android:layout_weight="1"
         android:layout_gravity="center"
         android:gravity="center"
-        android:background="@drawable/empresa"
+        android:background="@drawable/apideas"
         android:orientation="vertical">
 
 
