--- a/app/src/main/res/layout-land/activity_splash.xml
+++ b/app/src/main/res/layout-land/activity_splash.xml
@@ -30,7 +30,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
-            android:src="@drawable/finalapp"
+            android:src="@drawable/finapideas"
             />
 
 
@@ -44,7 +44,6 @@
         android:layout_weight="1"
         android:layout_gravity="center"
         android:gravity="center"
-        android:background="@drawable/apideas"
         android:orientation="vertical">
 
 
